practice_5/task1/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - protocol: TCP
      port: 80
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
spec:
  selector:
    app: nginx
    version: v2
  ports:
    - protocol: TCP
      port: 80
